--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 # Build and Release Folders
-bin/
-bin-debug/
-bin-release/
+export/
+
 
 # Other files and folders
-.settings/
+.sublime-project
+.sublime-workspace
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
